--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,50 @@
 body{
     text-align: center;
     height: 100%;
+    background-image: url("capa.jpgs");
+    background-size: contain;
+    background-repeat:repeat-y;
+    border:5px;
+    border-style: solid;
+    border-color:black;
 }
-ul {
+.header-container{
+    border:3px;
+    border-style: solid;
+    border-color:blue;
+}
+.nav-bar-container{
+    margin: auto 0;
+    padding:12px 48px;
+    border:3px;
+    border-style: solid;
+    border-color:green;
+}
+ul{
     list-style-type: none;
 }
+
 .nav-bar-itens{
     display: flex;
     justify-content: space-around;
+    color:ghostwhite;
+    border:3px;
+    border-style: solid;
+    border-color:red;
     
 }
+
+.hero-text{
+    text-align: left;
+    margin:auto 10%;
+    font-size:24px ;
+    border:3px;
+    border-style: solid;
+    border-color:yellow;
+}
+footer{
+    border:3px;
+    border-style: solid;
+    border-color:yellow;
+}
+
