--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,23 @@ footer{
     border-color:yellow;
 }
 
+/* estilizar depois*/
+.dropdown{
+    position:relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display:none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  .dropdown-content a{
+    display:block;
+  }
+
+  .dropdown:hover .dropdown-content {display: block;}
