--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ body{
     border:5px;
     border-style: solid;
     border-color:black;
+    margin:0px;
+    padding:0px;
 }
 .header-container{
     border:3px;
